# godot-for-agent

./: .gitignore  AGENTS.md  README.md  上下文缓存机制.md  消息块.md
ai_agent_service/: pyproject.toml
ai_agent_service/ai_agent_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ai_agent_service/app/: __main__.py  config.py  logging_config.py  main.py
ai_agent_service/app/agents/: bundled.py  loader.py  types.py
ai_agent_service/app/api/: routes.py  schemas.py
ai_agent_service/app/doctor/: __init__.py  checks.py
ai_agent_service/app/events/: __init__.py  store.py
ai_agent_service/app/llm/: cache_decision_engine.py  cache_manager.py  cache_observability.py  message_transformer.py  provider.py
ai_agent_service/app/lsp/: __init__.py  status.py
ai_agent_service/app/mcp/: __init__.py  server.py  status.py
ai_agent_service/app/memory/: __init__.py  store.py
ai_agent_service/app/orchestrator/: agent.py  map_progress.py  map_resources.py  map_workers.py
ai_agent_service/app/output_styles/: __init__.py  catalog.py  types.py
ai_agent_service/app/permissions/: engine.py  rules.py  types.py
ai_agent_service/app/prompt/: __init__.py  builder.py  context_builder.py  project_context.py  (+1 more)
ai_agent_service/tests/: test_auto_compact.py  test_commands.py  test_context_cache.py  test_deferred_godot_tools.py  test_ears.py  test_execute_gd_script_tool.py  test_extended_godot_tools.py  test_history_blocks.py  test_history_repairs.py  test_map_region_read_guard.py  test_map_tool.py  test_runtime_hardening.py  test_scene_mutation_tools.py  test_system_command_tool.py
(+124 files in other folders)
